fix z-index issue

--- a/style.css
+++ b/style.css
@@ -69,7 +69,6 @@ img#logo {
 #institutions {
     position: absolute;
     right: 0;
-    z-index: -1;
 }
 #institutions img {
     width: auto;
